# minix1.1

./: .gitignore  README.md
src/: CMakeLists.txt
src/kernel/: at_wini.c  clock.c  dmp.c  floppy.c  main.c  memory.c  printer.c  proc.c  system.c  tty.c  wini.c  xt_wini.c
src/kernel/i386/: CMakeLists.txt  Makefile  boot.S  kernel.ld  klib.h  klib.s  mpx.h  mpx.s  multiboot.c  multiboot.h
src/lib/: CMakeLists.txt  abort.c  abs.c  access.c  alarm.c  atoi.c  atol.c  bcopy.c  brk.c  brk2.c  call.c  catchsig.s  chdir.c  chmod.c  chown.c  chroot.c  cleanup.c  close.c  creat.c  crypt.c  doprintf.c  dup.c  dup2.c  exec.c  exit.c  fclose.c  fflush.c  fgets.c  fopen.c  fork.c  fprintf.c  fputs.c  fread.c  freopen.c  fseek.c  fstat.c  ftell.c  fwrite.c  getc.c  getegid.c  (+62 more)
